added itemListContainer, ItemList and Item, and implemented promise and use effect to simulate a backend call

--- a/src/Components/ItemListContainer/ItemListContainer.css
+++ b/src/Components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,7 @@
 /** @format */
 
-p {
-	text-align: center;
+.greeting {
 	color: gray;
-	font-weight: 100;
+	font-size: 18px;
+	text-align: center;
 }
