--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -10,6 +10,11 @@
 
 #item img {
 	width: 200px;
+	height: 200px;
 	margin: 15px;
 	border-radius: 10px;
+}
+
+#detailButton {
+	margin-bottom: 10px;
 }
